fixed bugs introduced by github editor

--- a/bench/Makefile
+++ b/bench/Makefile
@@ -1,8 +1,9 @@
-BENCHMARKS = 501.motioncontrol 502.linearcode 503.slots
+
+BENCHMARKS = 501.motioncontrol 502.linearcode 503.slots 504.intjitter
 .PHONY: all $(BENCHMARKS) common
 
 all: $(BENCHMARKS) common
-  @make -C common; for bench in $(BENCHMARKS) ; do make -C $$bench test ; done
+	@make -C common; for bench in $(BENCHMARKS) ; do make -C $$bench test ; done
 
 run:
 	@for bench in $(BENCHMARKS) ; do make -C $$bench run ; done
@@ -10,3 +11,4 @@ run:
 clean:
 	@find . -name "*.x" -exec rm {} \;
 	@find . -name "*.o" -exec rm {} \;
+
